Various fixes to sidebar nav Scrolling issue when content area is too short Sidebar shadows

--- a/project_tier/static/css/_layout_blocks.scss
+++ b/project_tier/static/css/_layout_blocks.scss
@@ -51,6 +51,7 @@ body {
 .page-content {
   background: $white;
   padding: $small-gutter 0;
+  box-shadow: inset 10px 0px 8px -8px rgba(0,0,0,0.2);
   @include breakpoint(medium up){
     padding: $medium-gutter 0;
   }
@@ -69,106 +70,6 @@ body {
 
 
 
-/* ==========================================================================
-   BLOCK SECTIONS
-   ========================================================================== */
-
-.block-section {
-  padding: $small-gutter 0 $medium-gutter;
-  @include breakpoint(medium up){
-    padding: $large-gutter 0;
-  }
-  @include breakpoint(large up){
-    padding: $medium-gutter*2 0;
-  }
-
-  .row {
-    @include breakpoint(medium up){
-      display: flex;
-      align-items: center;
-    }
-  }
-  
-  /* Section Intro
-     ========================================================================== */
-  .section-intro {
-    &::after {
-      content: '';
-      display: block;
-      height: 1px;
-      width: 50%;
-      margin: 0 auto $small-gutter;
-      background: $transparent-black;
-    }
-    @include breakpoint(medium up){
-      &::after {
-        display: none;
-      }
-    }
-  }
-
-  /* Section Title
-     ========================================================================== */
-  .section-title {
-    @extend %display-heading;
-    text-transform: uppercase;
-    margin: 0 0 $small-gutter;
-    .subtitle {
-      display: block;
-      text-transform: none;
-      color: $grey;
-      font-size: 0.8em;
-    }
-  }
-  
-  /* Section Desctiption
-     ========================================================================== */
-  .section-description {
-    @extend %secondary-text;
-    p {
-      margin-bottom: $small-gutter;
-    }
-  }
-  
-  /* Section Button
-     ========================================================================== */
-  .section-button {
-    @extend .monochrome;
-    margin-bottom: $small-gutter;
-    @include breakpoint(medium up){
-      margin-bottom: 0;
-    }
-  }
-  
-
-
-  /* EVEN SECTIONS
-     ========================================================================== */
-  &:nth-child(even){
-    background: $pale-grey;
-  }
-
-  /* Link List
-     ========================================================================== */
-  .section-link-list {
-    list-style: none;
-    margin: 0;
-    li {
-      margin-bottom: $small-gutter;
-      a {
-        @extend %medium-heading;
-        color: $dark-teal;
-        &:hover {
-          color: $red;
-        }
-      }
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-  }
-
-}
 
 
 
@@ -250,6 +151,7 @@ body {
      ========================================================================== */
   &:nth-child(even) {
     background: $pale-grey;
+    box-shadow: inset 10px 0px 8px -8px rgba(0,0,0,0.2);
   }
 
   &.alternate {
@@ -332,7 +234,10 @@ body {
   }
 }
 
-
+.off-canvas {
+  //box-shadow: 0px 5px 5px rgba(0,0,0,0.5) !important;
+  //z-index: 2;
+}
 
 
 /* ==========================================================================
@@ -353,9 +258,9 @@ body {
     position: relative;
     z-index: 2;
     box-shadow:
-      0px 5px 12px 5px rgba(0,0,0,0.2),
+      //0px 5px 12px 5px rgba(0,0,0,0.2),
       inset 10px 0px 8px -8px rgba(0,0,0,0.2),
-      inset 0px -23px 12px -20px rgba(0,0,0,0.31);
+      //inset 0px -23px 12px -20px rgba(0,0,0,0.31);
   }
   
 
